Features, it works but at the same time it doesn't